--- a/src/main/resources/sqlConfig.properties
+++ b/src/main/resources/sqlConfig.properties
@@ -1,4 +1,4 @@
 mysql.driver=com.mysql.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/timetable
+mysql.url=jdbc:mysql://localhost:3306/timetable?useUnicode=true&characterEncoding=utf8
 mysql.username=root
 mysql.password=hzg030
